updated jupyter notebook with descriptions of numpy.random

--- a/explaining.numpy.random.ipynb
+++ b/explaining.numpy.random.ipynb
@@ -7,6 +7,52 @@
     "# explaining.numpy.random\n",
     "### Brendan Ryan GMIT Semester 2 Programming for Data Analysis Assignment"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets start by explaining what NumPy is and why it so useful,\n",
+    "\n",
+    "NumPy is a pyton library used for working with arrays, it was created in 2005 by Travis Oliphant. It is an open source projet and you can use if freely, NumPy stands for Numerical Python.\n",
+    "\n",
+    "Why we use Numpy - in python we have listss that server the purpose of arrays, however are slow to proecss - Numpy aims to providig an array object that is 50 times faster than traditional python lists and is more efficient !!! NumPy arrays are store in one continous place in memory and Numpy lists are optimezed to work with the latest CPU achitectures.\n",
+    "\n",
+    "W3schools.com gives an nice easy explanation https://www.w3schools.com/python/numpy_intro.asp\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'numpy' from 'C:\\\\Users\\\\brend\\\\Anaconda3\\\\lib\\\\site-packages\\\\numpy\\\\__init__.py'>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#we can import the numpy module as follows\n",
+    "import numpy as np\n",
+    "np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Tell me more about the  numpy.random package \n",
+    "\n",
+    "NumPy offers the random moudle to work with random numbers - random is a subpackage of Numpy"
+   ]
   }
  ],
  "metadata": {
