added normal distribution task 3

--- a/explaining.numpy.random.ipynb
+++ b/explaining.numpy.random.ipynb
@@ -496,9 +496,33 @@
    "metadata": {},
    "source": [
     "## Task 3\n",
+    "\n",
+    "###  Distribution Functions \n",
+    "\n",
+    "What is Data Distribution?\n",
+    "\n",
+    "Data Distribution is a list of all possible values, and how often each value occurs.\n",
+    "\n",
+    "Such lists are important when working with statistics and data science.\n",
+    "\n",
+    "The random module offer methods that returns randomly generated data distributions.\n",
+    "\n",
     "Distribution functions - based on differnet probablity distributions - the best way to visual thes are with graphs\n",
     "\n",
-    "Normal\n",
+    "\n",
+    "\n",
+    "https://numpy.org/doc/stable/reference/random/generated/numpy.random.normal.html\n",
+    "Wikipedia, “Normal distribution”, https://en.wikipedia.org/wiki/Normal_distribution\n",
+    "\n",
+    "### Normal Distribution\n",
+    "\n",
+    "numpy.random.normal(loc=0.0, scale=1.0, size=None)\n",
+    "\n",
+    "The Normal Distribution is one of the most important distributions. It is also called the Gaussian Distribution after the German mathematician Carl Friedrich Gauss. It fits the probability distribution of many events, eg. IQ Scores, Heartbeat etc. The curve of a Normal Distribution is also known as the Bell Curve because of the bell-shaped curve\n",
+    "\n",
+    "(insert image of bell shaped curve)\n",
+    "\n",
+    "\n",
     "Uniform\n",
     "Logistic\n",
     "Binomial\n",
