updated titles and moved references to end of sections

--- a/explaining.numpy.random.ipynb
+++ b/explaining.numpy.random.ipynb
@@ -4,15 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Brendan Ryan GMIT\n",
-    "#### Semester 2 - Assignment for Programming for Data Analysis.\n",
-    "#### November 2020"
+    "## Semester 2 - Programming for Data Analysis - Assignment\n",
+    "__________\n",
+    "\n",
+    "### Uses and purpose of the numpy.random package Brendan Ryan GMIT\n",
+    "#### November 2020\n",
+    "___________\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<b> Introduction:  </b>\n",
+    "\n",
     "In this Jupyter notebook I will give an overview of the following \n",
     "\n",
     "1. An overview of Numpy and the Numpy.random package in Python and their purpose\n",
@@ -20,9 +25,16 @@
     "3. I will explain the use and purpose of at least five \"Distributions\" functions\n",
     "4. i will exaplin the user of Seeds in generating pseudorandom numbers.\n",
     "\n",
-    "I will be using the numpy.random package from python and i will also be utilising teh Matplotib and Seaborn packages for better vislaiton using graphs\n",
+    "I will be using the numpy.random package from python and i will also be utilising the Matplotib and Seaborn packages for better vislaiton using graphs.\n",
     "\n",
-    "Note: Once could also use Scipy www.scipy.org which is defined as being aa Python-based ecosystem of open-source software for mathematics, science, and engineering however this assigment focuses on nusing the Numpy and Numpy.random."
+    "_________________\n",
+    "\n",
+    "The repository for this assignment and the README in relation to this jupyter notebook are located at\n",
+    "- https://github.com/brendantipp/sem2_prog_data_analysis_assignment\n",
+    "\n",
+    "______________\n",
+    "\n",
+    "Note: One could also use Scipy www.scipy.org which is defined as being aa Python-based ecosystem of open-source software for mathematics, science, and engineering however this assigment focuses on using the Numpy and Numpy.random."
    ]
   },
   {
@@ -862,6 +874,7 @@
    "metadata": {},
    "source": [
     "Uniform Distribution References and Research:\n",
+    "- https://en.wikipedia.org/wiki/Continuous_uniform_distribution\n",
     "- https://www.w3schools.com/python/numpy_random_uniform.asp\n",
     "- https://numpy.org/doc/stable/reference/random/generated/numpy.random.Generator.uniform.html#numpy.random.Generator.uniform\n",
     "- https://mathworld.wolfram.com/UniformDistribution.html"
@@ -986,6 +999,8 @@
    "source": [
     "Logistic Distribution Research and References:\n",
     "\n",
+    "- https://en.wikipedia.org/wiki/Logistic_distribution\n",
+    "- https://numpy.org/doc/stable/reference/random/generated/numpy.random.Generator.logistic.html#numpy.random.Generator.logistic\n",
     "- https://www.w3schools.com/python/numpy_random_logistic.asp\n",
     "Weisstein, Eric W. “Logistic Distribution.” From MathWorld–A Wolfram Web Resource. http://mathworld.wolfram.com/LogisticDistribution.html\n",
     "- Wikipedia, “Logistic-distribution”, http://en.wikipedia.org/wiki/Logistic-distribution\n",
@@ -1126,6 +1141,8 @@
    "source": [
     "Binomial Distribution Reserach and References:\n",
     "\n",
+    "- https://numpy.org/doc/stable/reference/random/generated/numpy.random.Generator.binomial.html#numpy.random.Generator.binomial\n",
+    "- https://en.wikipedia.org/wiki/Binomial_distribution\n",
     "- https://www.w3schools.com/python/numpy_random_binomial.asp\n",
     "- https://www.statisticshowto.com/probability-and-statistics/binomial-theorem/binomial-distribution-formula/"
    ]
@@ -1192,7 +1209,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ae we can see from the histogram above, we already know the the probability or likelyhood that each visitor will visit at least 10 times in the year - with the highest probabilty in around 8 visits per year. As displayed above the probabilty of someone visiting more often declines the higher the expectation if them visiting more often etc"
+    "Ae we can see from the histogram above, we already know the the probability or likelyhood that each visitor will visit at least 10 times in the year - with the highest probabilty in around 8 visits per year. As displayed above the probability of someone visiting more often declines the higher the expectation of them visiting more often etc"
    ]
   },
   {
@@ -1201,10 +1218,11 @@
    "source": [
     "Poisson Distribution Research and References:\n",
     "\n",
+    "- https://numpy.org/doc/stable/reference/random/generated/numpy.random.Generator.poisson.html#numpy.random.Generator.poisson\n",
+    "- https://en.wikipedia.org/wiki/Poisson_distribution\n",
     "- https://brilliant.org/wiki/poisson-distribution/\n",
     "- https://towardsdatascience.com/poisson-distribution-intuition-and-derivation-1059aeab90d\n",
-    "- https://www.statisticshowto.com/poisson-distribution/\n",
-    "- https://brilliant.org/wiki/poisson-distribution/"
+    "- https://www.statisticshowto.com/poisson-distribution/"
    ]
   },
   {
@@ -1214,18 +1232,6 @@
     "## Task 4 \n",
     "\n",
     "### Explain the use of Seeds in Generating Pseudorandom Numbers\n",
-    "\n",
-    "Research and References:\n",
-    "\n",
-    "- https://www.pcg-random.org/\n",
-    "- https://www.cs.hmc.edu/tr/hmc-cs-2014-0905.pdf\n",
-    "- https://www.pcg-random.org/\n",
-    "- https://stackoverflow.com/questions/63081108/how-can-i-store-and-restore-random-state-in-numpy-random-generator-instances\n",
-    "- https://numpy.org/doc/stable/reference/random/bit_generators/pcg64.htm\n",
-    "- https://www.sharpsightlabs.com/blog/numpy-random-seed/\n",
-    "- https://en.wikipedia.org/wiki/Random_seed\n",
-    "- https://www.researchgate.net/post/Can_someone_explain_what_is_seed_in_generating_a_random_number\n",
-    "\n",
     "\n",
     "There’s a fundamental problem when using computers to simulate or work with random processes - that is computers are completely deterministic, not random.\n",
     "\n",
@@ -1373,15 +1379,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### Use of Seeds in Generating Pseudorandom Numbers - Research and References:\n",
+    "\n",
+    "- https://www.pcg-random.org/\n",
+    "- https://www.cs.hmc.edu/tr/hmc-cs-2014-0905.pdf\n",
+    "- https://www.pcg-random.org/\n",
+    "- https://stackoverflow.com/questions/63081108/how-can-i-store-and-restore-random-state-in-numpy-random-generator-instances\n",
+    "- https://numpy.org/doc/stable/reference/random/bit_generators/pcg64.htm\n",
+    "- https://www.sharpsightlabs.com/blog/numpy-random-seed/\n",
+    "- https://en.wikipedia.org/wiki/Random_seed\n",
+    "- https://www.researchgate.net/post/Can_someone_explain_what_is_seed_in_generating_a_random_number"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Assignment Conclusion\n",
     "\n",
     "I did find the assignment alot harder than I initally imagined. The recent changes to the Numpy library made it extra difficult in that the majoirty of the research, code and help tutorials on the internet still relate to older versions of numpy. This resulted in me spending more time on research than on coding.\n",
     "\n",
-    "However I have gained a lot of knowlege on the Numpy library the numpy.random subpackage and the use of the various functions involved. I would have liked to have had more time to test out the code etc and play around with some graphs etc but the assignment has now given me the basis to do this. It has also proven useful to have had the chanc to use the newer version of Numpy and it has opending my eyes to how important it is for a programmer to keep up to date with changes to the code and libraries used.\n",
+    "However I have gained a lot of knowledge on the Numpy library the numpy.random subpackage and the use of the various functions involved. I would have liked to have had more time to test out the code etc and play around with some graphs etc but the assignment has now given me the basis to do this. It has also proven useful to have had the chance to use the newer version of Numpy and it has opending my eyes to how important it is for a programmer to keep up to date with changes to the code and libraries used.\n",
     "\n",
     "Thank you\n",
     "\n",
     "Brendan Ryan"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The END"
    ]
   },
   {
